--- a/src/app/cell-types/cell-types.component.html
+++ b/src/app/cell-types/cell-types.component.html
@@ -5,7 +5,8 @@
             <option value="" *ngFor="let prop of props" [value]="prop">{{getColName(prop)}}</option>
         </select>
         <label class="offset-md-1 col-md-1" for="">Search: </label>
-        <input class="col-md-2" type="text" [ngModel]="searchInput" (ngModelChange)="searchChanged($event)" />
+        <input class="col-md-2" type="text" #sIn [ngModel]="searchInput" (ngModelChange)="searchChanged($event)" />
+        <i class="fa fa-close pull-left col-md-1" (click)="clearSelect()"></i>
     </div>
     <hr>
     <div class="row">
