Added Description folder with video and pdf files: CellTypes app. Exam in Angular.mp4 CellTypes app. Exam in Angular.pdf

--- a/src/app/cell-types/cell-types.component.html
+++ b/src/app/cell-types/cell-types.component.html
@@ -6,7 +6,7 @@
         </select>
         <label class="offset-md-1 col-md-1" for="">Search: </label>
         <input class="col-md-2" type="text" #sIn [ngModel]="searchInput" (ngModelChange)="searchChanged($event)" />
-        <i class="fa fa-close pull-left col-md-1" (click)="clearSelect()"></i>
+        <i class="fa fa-close col-md-1" (click)="clearSelect()"></i>
     </div>
     <hr>
     <div class="row">
